--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'MapoFlowerIsland';
   src: url('./fonts/MapoFlowerIsland.ttf');
@@ -7,8 +6,9 @@
   font-style: normal;
 }
 
-.main-font {
+.font-style {
   font-family: 'MapoFlowerIsland', sans-serif;
+  color: #333;
 }
 
 .App {
