--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,10 +18,22 @@
   font-style: normal;
 }
 
+body {
+  min-width: 100vw;
+  /* overflow-x: scroll; */
+}
+
 .font-style {
   /* font-family: 'MapoFlowerIsland', sans-serif; */
   font-family: 'HeirofLightRegular', 'HeirofLightOTFReqular', sans-serif;
   color: #333;
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 130px;
+  /* width: max-content; */
+  min-width: 1500px;
+  /* background-color: aqua; */
+  margin: 0;
 }
 
 .App {
